# K66_tutorial

./: .gitignore  README.md
10_SCPI/: LMX2572_reg.h  main.c  main.mex
10_SCPI/armgcc/: clean.bat
10_SCPI/board/: peripherals.c  peripherals.c.bak  peripherals.h.bak  pin_mux.c  pin_mux.c.bak  pin_mux.h.bak
10_SCPI/components/uart/: component_uart_adapter_MK66F18.cmake
10_SCPI/device/gcc/: startup_MK66F18.S
10_SCPI/drivers/: driver_cache_lmem_MK66F18.cmake  driver_clock_MK66F18.cmake  driver_flash_MK66F18.cmake  driver_lpuart_MK66F18.cmake  driver_pit_MK66F18.cmake  driver_rcm_MK66F18.cmake  driver_sai_MK66F18.cmake  driver_sai_edma_MK66F18.cmake  driver_smc_MK66F18.cmake  fsl_edma.c  fsl_tsi_v4.h  fsl_uart_edma.c
10_SCPI/utilities/: fsl_sbrk.c
1_led_blinky/: led_blinky.c  led_blinky.mex
1_led_blinky/armgcc/: CMakeLists.txt  build_debug.bat  flash_and_run.gdb  output.map
1_led_blinky/board/: pin_mux.c  pin_mux.h
2_hello_world/: hello_world.c
2_hello_world/armgcc/: CMakeLists.txt  build_debug.bat  load.gdb  output.map
3_I2C/: i2c_interrupt_b2b_transfer_master.c  i2c_interrupt_b2b_transfer_master.mex  readme.txt
3_I2C/armgcc/: CMakeLists.txt  build_debug.bat  flags.cmake  load.gdb  output.map  restart.gdb
3_I2C/board/: pin_mux.c
4_I2C_LMK05028_read/: LMK05028.c  LMK05028_reg.h
4_I2C_LMK05028_read/armgcc/: output.map
5_I2C_LMK05028_write/: 5_I2C_LMK05028_write.mex  LMK05028.c  LMK05028_reg.h
5_I2C_LMK05028_write/armgcc/: CMakeLists.txt  MK66FN2M0xxx18_flash.ld  build_debug.bat  clean.bat  config.cmake  load.gdb  restart.gdb
5_I2C_LMK05028_write/board/: clock_config.c  pin_mux.c  pin_mux.h
6_hello_world_simple/: README.md  simple.c
6_hello_world_simple/armgcc/: CMakeLists.txt  clean.bat  flags.cmake
6_hello_world_simple/device/: device_MK66F18_CMSIS_MK66F18.cmake
6_hello_world_simple/drivers/: driver_cmp_MK66F18.cmake  driver_common_MK66F18.cmake  driver_dac_MK66F18.cmake  driver_dmamux_MK66F18.cmake  driver_ewm_MK66F18.cmake  driver_ftm_MK66F18.cmake  driver_i2c_MK66F18.cmake  driver_pdb_MK66F18.cmake  driver_uart_edma_MK66F18.cmake  fsl_uart_edma.h
6_hello_world_simple/utilities/: utility_assert_lite_MK66F18.cmake  utility_debug_console_lite_MK66F18.cmake
7_rtos/: README.md  main.c  main.mex
7_rtos/armgcc/: CMakeLists.txt  clean.bat  load.gdb
7_rtos/board/: peripherals.c  pin_mux.c  pin_mux.c.bak  pin_mux.h  pin_mux.h.bak
7_rtos/device/gcc/: MK66FN2M0xxx18_ram.ld
7_rtos/drivers/: driver_cmt_MK66F18.cmake  driver_crc_MK66F18.cmake  driver_dspi_MK66F18.cmake  driver_gpio_MK66F18.cmake  driver_llwu_MK66F18.cmake  driver_lptmr_MK66F18.cmake  driver_port_MK66F18.cmake  driver_rtc_MK66F18.cmake  driver_sdhc_MK66F18.cmake  fsl_tsi_v4.c
7_rtos/freertos/: CMakeLists.txt  freertos.cmake
8_i2s_transmit/: README.md  main.c  main.mex
8_i2s_transmit/armgcc/: 8_i2s_transmit - Shortcut.lnk  CMakeLists.txt  build_debug.bat
8_i2s_transmit/board/: peripherals.c  peripherals.c.bak  peripherals.h  peripherals.h.bak  pin_mux.c  pin_mux.h
8_i2s_transmit/components/codec/: component_da7212_adapter_MK66F18.cmake  driver_codec_MK66F18.cmake
8_i2s_transmit/components/codec/da7212/: driver_dialog7212_MK66F18.cmake
8_i2s_transmit/components/codec/i2c/: component_codec_i2c_MK66F18.cmake
8_i2s_transmit/components/codec/wm8904/: fsl_wm8904.c  fsl_wm8904.h
8_i2s_transmit/components/i2c/: component_i2c_adapter_MK66F18.cmake  fsl_adapter_i2c.c
8_i2s_transmit/components/lists/: component_lists_MK66F18.cmake
8_i2s_transmit/device/: device_MK66F18_startup_MK66F18.cmake
8_i2s_transmit/drivers/: driver_edma_MK66F18.cmake  driver_i2c_edma_MK66F18.cmake  driver_lpuart_edma_MK66F18.cmake  driver_pmc_MK66F18.cmake  driver_tpm_MK66F18.cmake  driver_vref_MK66F18.cmake
8_i2s_transmit/sai/edma_ping_pong_buffer/: readme.txt  sai_edma_ping_pong_buffer.c  sai_edma_ping_pong_buffer_v3_9.xml
8_i2s_transmit/sai/edma_ping_pong_buffer/armgcc/: CMakeLists.txt  flags.cmake
8_i2s_transmit/sai/edma_record_playback/: pin_mux.h  readme.txt  sai_edma_record_playback.c  sai_edma_record_playback_v3_9.xml
8_i2s_transmit/sai/edma_record_playback/armgcc/: CMakeLists.txt  config.cmake
8_i2s_transmit/sai/edma_transfer/: pin_mux.c  readme.txt  sai_edma_transfer.c  sai_edma_transfer_v3_9.xml
8_i2s_transmit/sai/edma_transfer/armgcc/: CMakeLists.txt
8_i2s_transmit/sai/interrupt/: readme.txt  sai_interrupt.c  sai_interrupt_v3_9.xml
8_i2s_transmit/sai/interrupt/armgcc/: CMakeLists.txt
8_i2s_transmit/sai/interrupt_record_playback/: pin_mux.c  readme.txt  sai_interrupt_record_playback.c  sai_interrupt_record_playback_v3_9.xml
8_i2s_transmit/sai/interrupt_record_playback/armgcc/: CMakeLists.txt
8_i2s_transmit/sai/interrupt_transfer/: readme.txt  sai_interrupt_transfer.c  sai_interrupt_transfer_v3_9.xml
8_i2s_transmit/sai/interrupt_transfer/armgcc/: CMakeLists.txt
9_rtos_spi/: README.md  main.c
9_rtos_spi/armgcc/: CMakeLists.txt
9_rtos_spi/board/: peripherals.h  pin_mux.h
9_rtos_spi/device/: device_MK66F18_system_MK66F18.cmake
9_rtos_spi/drivers/: driver_adc16_MK66F18.cmake  driver_dspi_edma_MK66F18.cmake  driver_enet_MK66F18.cmake  driver_flexcan_MK66F18.cmake  driver_rnga_MK66F18.cmake  driver_sim_MK66F18.cmake  driver_sysmpu_MK66F18.cmake  driver_uart_MK66F18.cmake  driver_wdog_MK66F18.cmake  fsl_edma.h  fsl_sai_edma.c  fsl_sai_edma.h
9_rtos_spi/freertos/portable/: CMakeLists.txt  FreeRTOSConfig.h
